--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.4.2
+  flutter_svg: ^2.0.7
   go_router: ^11.1.2
+  google_fonts: ^6.1.0
+  icons_plus: ^4.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -22,25 +25,4 @@ flutter:
 
   assets:
     - assets/images/
-
-  fonts:
-    - family: IBMPlexSans
-      fonts:
-        - asset: assets/fonts/IBMPlexSans-Bold.ttf
-          weight: 900
-        - asset: assets/fonts/IBMPlexSans-Bold.ttf
-          weight: 800
-        - asset: assets/fonts/IBMPlexSans-Bold.ttf
-          weight: 700
-        - asset: assets/fonts/IBMPlexSans-SemiBold.ttf
-          weight: 600
-        - asset: assets/fonts/IBMPlexSans-Medium.ttf
-          weight: 500
-        - asset: assets/fonts/IBMPlexSans-Regular.ttf
-          weight: 400
-        - asset: assets/fonts/IBMPlexSans-Light.ttf
-          weight: 300
-        - asset: assets/fonts/IBMPlexSans-ExtraLight.ttf
-          weight: 200
-        - asset: assets/fonts/IBMPlexSans-Thin.ttf
-          weight: 100
+    - assets/svg/
