--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_datetime_picker_plus: ^2.1.0
   flutter_localizations:
     sdk: flutter
   flutter_riverpod: ^2.4.2
