--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,9 @@ dependencies:
   intl: ^0.18.1
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
+  package_info_plus: ^4.2.0
   path_provider: ^2.1.1
+  shared_preferences: ^2.2.2
   url_launcher: ^6.1.14
 
 dev_dependencies:
