--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: tasking
 description: A new Flutter project.
 publish_to: 'none'
-version: 1.0.0
+version: 0.1.0+1
 
 environment:
   sdk: '>=3.1.2 <4.0.0'
@@ -16,6 +16,7 @@ dependencies:
   flutter_svg: ^2.0.7
   go_router: ^11.1.2
   google_fonts: ^6.1.0
+  icons_launcher: ^2.1.4
   icons_plus: ^4.0.0
   intl: ^0.18.1
   isar: ^3.1.0+1
