--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.4.2
   flutter_svg: ^2.0.7
+  flutter_timezone: ^1.0.8
   go_router: ^11.1.2
   google_fonts: ^6.1.0
   icons_launcher: ^2.1.4
@@ -24,7 +25,9 @@ dependencies:
   isar_flutter_libs: ^3.1.0+1
   package_info_plus: ^4.2.0
   path_provider: ^2.1.1
+  rxdart: ^0.27.7
   shared_preferences: ^2.2.2
+  timezone: ^0.9.2
   url_launcher: ^6.1.14
 
 dev_dependencies:
