--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.1.2 <4.0.0'
 
 dependencies:
+  adaptive_theme: ^3.5.0
   flutter:
     sdk: flutter
   flutter_datetime_picker_plus: ^2.1.0
