--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: tasking
 description: A new Flutter project.
 publish_to: 'none'
-version: 0.1.0+3
+version: 0.1.0+4
 
 environment:
   sdk: '>=3.1.2 <4.0.0'
@@ -11,7 +11,6 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_datetime_picker_plus: ^2.1.0
-  flutter_local_notifications: ^16.1.0
   flutter_localizations:
     sdk: flutter
   flutter_riverpod: ^2.4.2
@@ -27,6 +26,7 @@ dependencies:
   isar_flutter_libs: ^3.1.0+1
   package_info_plus: ^4.2.0
   path_provider: ^2.1.1
+  permission_handler: ^11.2.0
   rxdart: ^0.27.7
   shared_preferences: ^2.2.2
   timezone: ^0.9.2
