--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   adaptive_theme: ^3.5.0
+  flex_color_picker: ^3.3.1
   flutter:
     sdk: flutter
   flutter_datetime_picker_plus: ^2.1.0
