--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   adaptive_theme: ^3.5.0
+  animate_do: ^3.3.0
   file_picker: ^6.1.1
   flex_color_picker: ^3.3.1
   flutter:
@@ -31,6 +32,7 @@ dependencies:
   path_provider: ^2.1.2
   permission_handler: ^11.2.0
   rxdart: ^0.27.7
+  share_plus: ^7.2.1
   shared_preferences: ^2.2.2
   timezone: ^0.9.2
   url_launcher: ^6.1.14
