style: :art: fix colors card and modals

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,5 +41,7 @@
 		<array>
 			<string>UIInterfaceOrientationPortrait</string>
 		</array>
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>A dependency is really used to obtain a backup saved in a .ZIP exclusively</string>
 	</dict>
 </plist>
