--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   adaptive_theme: ^3.5.0
   animate_do: ^3.3.0
+  calendar_date_picker2: ^0.5.3
   file_picker: ^6.1.1
   flex_color_picker: ^3.3.1
   flutter:
@@ -35,6 +36,7 @@ dependencies:
   rxdart: ^0.27.7
   share_plus: ^7.2.1
   shared_preferences: ^2.2.2
+  time_picker_spinner: ^0.0.1
   timezone: ^0.9.2
   url_launcher: ^6.1.14
 
