--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: tasking
 description: A new Flutter project.
 publish_to: 'none'
-version: 0.1.0+8
+version: 0.1.0+9
 
 environment:
   sdk: '>=3.1.2 <4.0.0'
@@ -29,6 +29,7 @@ dependencies:
   intl: ^0.18.1
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
+  numberpicker: ^2.1.2
   package_info_plus: ^4.2.0
   path_provider: ^2.1.2
   permission_handler: ^11.2.0
