--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,6 @@ migrate_working_dir/
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
 #.vscode/
-.fvm/flutter_sdk
 generated
 pubspec.lock
 
@@ -45,3 +44,6 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# FVM Version Cache
+.fvm/
