--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,13 @@
 name: tasking
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0+9
 
 environment:
-  sdk: '>=3.1.2 <4.0.0'
+  sdk: ">=3.1.2 <4.0.0"
 
 dependencies:
-  adaptive_theme: ^3.5.0
-  animate_do: ^3.3.0
+  animate_do: ^3.3.3
   calendar_date_picker2: ^0.5.3
   file_picker: ^6.1.1
   flex_color_picker: ^3.3.1
@@ -18,30 +17,29 @@ dependencies:
   flutter_local_notifications: ^16.3.2
   flutter_localizations:
     sdk: flutter
-  flutter_riverpod: ^2.4.2
-  flutter_svg: ^2.0.7
+  flutter_riverpod: ^2.4.10
+  flutter_svg: ^2.0.9
   flutter_timezone: ^1.0.8
   gap: ^3.0.1
-  go_router: ^11.1.2
-  google_fonts: ^6.1.0
-  icons_launcher: ^2.1.4
-  icons_plus: ^4.0.0
+  go_router: ^13.2.0
+  icons_launcher: ^2.1.7
+  icons_plus: ^5.0.0
   intl: ^0.18.1
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
   numberpicker: ^2.1.2
-  package_info_plus: ^4.2.0
+  package_info_plus: ^5.0.1
   path_provider: ^2.1.2
-  permission_handler: ^11.2.0
+  permission_handler: ^11.3.0
   rxdart: ^0.27.7
-  share_plus: ^7.2.1
+  share_plus: ^7.2.2
   shared_preferences: ^2.2.2
   timezone: ^0.9.2
-  url_launcher: ^6.1.14
+  url_launcher: ^6.2.4
 
 dev_dependencies:
-  build_runner: ^2.4.6
-  flutter_lints: ^2.0.0
+  build_runner: ^2.4.8
+  flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
   isar_generator: ^3.1.0+1
@@ -51,8 +49,30 @@ flutter:
   generate: true
 
   assets:
-    - assets/images/
+    - assets/img/
     - assets/svg/
+
+  fonts:
+    - family: Lexend
+      fonts:
+        - asset: assets/fonts/Lexend-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/Lexend-ExtraLight.ttf
+          weight: 200
+        - asset: assets/fonts/Lexend-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Lexend-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Lexend-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Lexend-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Lexend-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Lexend-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/Lexend-Black.ttf
+          weight: 900
 
 flutter_intl:
   enabled: true
