--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flex_color_picker: ^3.3.1
   flutter:
     sdk: flutter
+  flutter_advanced_avatar: ^1.5.0
   flutter_archive: ^6.0.0
   flutter_local_notifications: ^16.3.2
   flutter_localizations:
