--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   flutter_advanced_avatar: ^1.5.0
   flutter_archive: ^6.0.0
+  flutter_dotenv: ^5.1.0
   flutter_local_notifications: ^16.3.2
   flutter_localizations:
     sdk: flutter
@@ -35,6 +36,7 @@ dependencies:
   rxdart: ^0.27.7
   share_plus: ^7.2.2
   shared_preferences: ^2.2.2
+  supabase_flutter: ^2.3.4
   timezone: ^0.9.2
   url_launcher: ^6.2.4
 
@@ -50,6 +52,7 @@ flutter:
   generate: true
 
   assets:
+    - .env
     - assets/img/
     - assets/svg/
 
