--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,20 @@
 include: package:flutter_lints/flutter.yaml
+
+analyzer:
+  errors:
+    todo: info
+    prefer_const_constructors: warning
+    avoid_empty_else: error
+
 linter:
   rules:
-    prefer_single_quotes: true
+    - always_declare_return_types
+    - always_put_required_named_parameters_first
+    - prefer_single_quotes
+    - always_use_package_imports
+    - annotate_overrides
+    - avoid_annotating_with_dynamic
+    - avoid_returning_null_for_void
+    - avoid_void_async
+    - empty_statements
+    - no_duplicate_case_values
