--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,8 +10,8 @@ linter:
   rules:
     - always_declare_return_types
     - always_put_required_named_parameters_first
+    - prefer_relative_imports
     - prefer_single_quotes
-    - always_use_package_imports
     - annotate_overrides
     - avoid_annotating_with_dynamic
     - avoid_returning_null_for_void
