--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   animate_do: ^3.3.3
   calendar_date_picker2: ^0.5.3
   file_picker: ^6.1.1
+  firebase_core: ^2.29.0
   flex_color_picker: ^3.3.1
   flutter:
     sdk: flutter
@@ -30,13 +31,12 @@ dependencies:
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
   numberpicker: ^2.1.2
-  package_info_plus: ^5.0.1
+  package_info_plus: ^7.0.0
   path_provider: ^2.1.2
   permission_handler: ^11.3.0
   rxdart: ^0.27.7
   share_plus: ^7.2.2
   shared_preferences: ^2.2.2
-  supabase_flutter: ^2.3.4
   timezone: ^0.9.2
   url_launcher: ^6.2.4
 
@@ -52,7 +52,6 @@ flutter:
   generate: true
 
   assets:
-    - .env
     - assets/img/
     - assets/svg/
 
