--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   animate_do: ^3.3.3
   calendar_date_picker2: ^0.5.3
   file_picker: ^6.1.1
+  firebase_auth: ^4.19.1
   firebase_core: ^2.29.0
   flex_color_picker: ^3.3.1
   flutter:
