--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_timezone: ^1.0.8
   gap: ^3.0.1
   go_router: ^13.2.0
+  google_sign_in: ^6.2.1
   icons_launcher: ^2.1.7
   icons_plus: ^5.0.0
   intl: ^0.18.1
@@ -42,7 +43,7 @@ dependencies:
   url_launcher: ^6.2.4
 
 dev_dependencies:
-  build_runner: ^2.4.8
+  build_runner: any
   flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
