--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   rxdart: ^0.27.7
   share_plus: ^7.2.2
   shared_preferences: ^2.2.2
+  sign_in_with_apple: ^6.1.0
   timezone: ^0.9.2
   url_launcher: ^6.2.4
 
