--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   google_sign_in: ^6.2.1
   icons_launcher: ^2.1.7
   icons_plus: ^5.0.0
+  internet_connection_checker_plus: ^2.3.0
   intl: ^0.18.1
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
