--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,10 +46,11 @@ dependencies:
 
 dev_dependencies:
   build_runner: any
-  flutter_lints: ^3.0.1
+  flutter_lints: ^3.0.2
   flutter_test:
     sdk: flutter
   isar_generator: ^3.1.0+1
+  flutter_gen: any
 
 flutter:
   uses-material-design: true
