--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   animate_do: ^3.3.3
   calendar_date_picker2: ^0.5.3
+  crypto: ^3.0.3
   file_picker: ^6.1.1
   firebase_auth: ^4.19.1
   firebase_core: ^2.29.0
@@ -46,11 +47,11 @@ dependencies:
 
 dev_dependencies:
   build_runner: any
+  flutter_gen: any
   flutter_lints: ^3.0.2
   flutter_test:
     sdk: flutter
   isar_generator: ^3.1.0+1
-  flutter_gen: any
 
 flutter:
   uses-material-design: true
