--- a/.gitignore
+++ b/.gitignore
@@ -20,10 +20,6 @@ migrate_working_dir/
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
 #.vscode/
-generated
-pubspec.lock
-firebase_options.dart
-*.g.dart
 
 # Flutter/Dart/Pub related
 **/doc/api/
@@ -49,3 +45,12 @@ app.*.map.json
 
 # FVM Version Cache
 .fvm/
+
+# Environment configuration
+*.env
+
+# Generated files
+generated
+pubspec.lock
+firebase_options.dart
+*.g.dart
