--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_riverpod: ^2.4.10
+  flutter_staggered_grid_view: ^0.7.0
   flutter_svg: ^2.0.9
   flutter_timezone: ^1.0.8
   gap: ^3.0.1
