--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   file_picker: ^6.1.1
   firebase_auth: ^4.19.1
   firebase_core: ^2.29.0
-  flex_color_picker: ^3.3.1
+  flex_color_picker: ^3.4.1
   flutter:
     sdk: flutter
   flutter_advanced_avatar: ^1.5.0
@@ -26,6 +26,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   flutter_svg: ^2.0.9
   flutter_timezone: ^1.0.8
+  fluttertoast: ^8.2.5
   gap: ^3.0.1
   go_router: ^13.2.0
   google_sign_in: ^6.2.1
