--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,7 +2,7 @@ include: package:flutter_lints/flutter.yaml
 
 analyzer:
   errors:
-    todo: info
+    todo: warning
     prefer_const_constructors: warning
     avoid_empty_else: error
 
