--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: tasking
 description: A new Flutter project.
 publish_to: "none"
-version: 0.1.0+9
+version: 0.1.2+11
 
 environment:
   sdk: ">=3.1.2 <4.0.0"
@@ -24,7 +24,7 @@ dependencies:
   go_router: ^13.2.0
   icons_launcher: ^2.1.7
   icons_plus: ^5.0.0
-  intl: ^0.18.1
+  intl: any
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
   package_info_plus: ^7.0.0
