--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,9 @@ environment:
   sdk: ">=3.1.2 <4.0.0"
 
 dependencies:
-  animate_do: ^3.3.3
-  crypto: ^3.0.3
-  file_picker: ^6.1.1
   flex_color_picker: ^3.4.1
   flutter:
     sdk: flutter
-  flutter_archive: ^6.0.0
   flutter_localizations:
     sdk: flutter
   flutter_riverpod: ^2.4.10
@@ -32,21 +28,18 @@ dependencies:
   rxdart: ^0.27.7
   share_plus: ^7.2.2
   shared_preferences: ^2.2.2
+  slang: ^3.31.1
+  slang_flutter: ^3.31.0
   timezone: ^0.9.2
   url_launcher: ^6.2.4
 
 dev_dependencies:
   build_runner: any
-  flutter_gen: any
-  flutter_test:
-    sdk: flutter
   isar_generator: ^3.1.0+1
   lint: any
 
 flutter:
   uses-material-design: true
-  generate: true
-
   assets:
     - assets/img/
     - assets/svg/
@@ -72,6 +65,3 @@ flutter:
           weight: 800
         - asset: assets/fonts/Lexend-Black.ttf
           weight: 900
-
-flutter_intl:
-  enabled: true
