--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,21 +21,19 @@ dependencies:
   icons_launcher: ^2.1.7
   icons_plus: ^5.0.0
   intl: any
-  isar: ^3.1.0+1
-  isar_flutter_libs: ^3.1.0+1
   package_info_plus: ^7.0.0
+  path: ^1.9.0
   path_provider: ^2.1.2
   rxdart: ^0.27.7
   share_plus: ^7.2.2
   shared_preferences: ^2.2.2
   slang: ^3.31.1
   slang_flutter: ^3.31.0
+  sqflite: ^2.3.3+1
   timezone: ^0.9.2
   url_launcher: ^6.2.4
 
 dev_dependencies:
-  build_runner: any
-  isar_generator: ^3.1.0+1
   lint: any
 
 flutter:
