--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flex_color_picker: ^3.4.1
   flutter:
     sdk: flutter
+  flutter_datetime_picker_plus: ^2.2.0
   flutter_localizations:
     sdk: flutter
   flutter_riverpod: ^2.4.10
