--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: ">=3.1.2 <4.0.0"
 
 dependencies:
+  awesome_notifications: any
+  awesome_notifications_core: ^0.9.3
   flex_color_picker: ^3.4.1
   flutter:
     sdk: flutter
@@ -25,6 +27,7 @@ dependencies:
   package_info_plus: ^7.0.0
   path: ^1.9.0
   path_provider: ^2.1.2
+  permission_handler: ^11.3.1
   rxdart: ^0.27.7
   share_plus: ^7.2.2
   shared_preferences: ^2.2.2
