--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   sqflite: ^2.3.3+1
   timezone: ^0.9.2
   url_launcher: ^6.2.4
+  webview_flutter: ^4.8.0
 
 dev_dependencies:
   lint: any
