--- a/slang.yaml
+++ b/slang.yaml
@@ -1,5 +1,8 @@
 base_locale: en
 input_directory: lib/i18n
 input_file_pattern: .i18n.json
-output_directory: lib/generated
+output_directory: lib/i18n/generated
 translate_var: S
+namespaces: true
+output_file_name: translations.g.dart
+output_format: multiple_files
