feat(router, tasks): add new task routes and pages

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,8 @@
     "prefs",
     "pruébalas",
     "Recuerdame",
-    "rxdart"
+    "rxdart",
+    "salomon"
   ],
   "dart.flutterSdkPath": ".fvm/versions/3.22.3"
 }
