--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   path_provider: ^2.1.2
   permission_handler: ^11.3.1
   rxdart: ^0.27.7
+  salomon_bottom_bar: ^3.3.2
   share_plus: ^7.2.2
   shared_preferences: ^2.2.2
   slang: ^3.31.1
