--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_datetime_picker_plus: ^2.2.0
   flutter_localizations:
     sdk: flutter
+  flutter_markdown: ^0.7.3+1
   flutter_riverpod: ^2.4.10
   flutter_staggered_grid_view: ^0.7.0
   flutter_svg: ^2.0.9
@@ -46,6 +47,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/svg/
+    - privacy-policy.md
 
   fonts:
     - family: Lexend
