--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   fluttertoast: ^8.2.5
   gap: ^3.0.1
   go_router: ^13.2.0
+  http: ^1.2.2
   icons_launcher: ^2.1.7
   icons_plus: ^5.0.0
   intl: any
