--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   awesome_notifications: any
   awesome_notifications_core: ^0.9.3
+  ficonsax: ^0.0.3
   flex_color_picker: ^3.4.1
   flutter:
     sdk: flutter
@@ -23,7 +24,6 @@ dependencies:
   go_router: ^13.2.0
   http: ^1.2.2
   icons_launcher: ^2.1.7
-  icons_plus: ^5.0.0
   intl: any
   package_info_plus: ^7.0.0
   path: ^1.9.0
