--- a/icons_launcher.yaml
+++ b/icons_launcher.yaml
@@ -1,10 +1,10 @@
 icons_launcher:
-  image_path: 'assets/ic/ic_ios.png'
+  image_path: "assets/ic_launcher/ic_foreground.png"
   platforms:
     android:
       enable: true
-      adaptive_background_image: 'assets/ic/ic_background.png'
-      adaptive_foreground_image: 'assets/ic/ic_foreground.png'
+      adaptive_background_color: "#1F2022"
+      adaptive_foreground_image: "assets/ic_launcher/ic_foreground.png"
     ios:
       enable: true
-      image_path: 'assets/ic/ic_ios.png'
+      image_path: "assets/ic_launcher/ic_foreground.png"
