--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,33 +8,29 @@ environment:
 
 dependencies:
   awesome_notifications: any
-  awesome_notifications_core: ^0.9.3
+  awesome_notifications_core: ^0.10.0
   ficonsax: ^0.0.3
-  flex_color_picker: ^3.4.1
   flutter:
     sdk: flutter
   flutter_datetime_picker_plus: ^2.2.0
   flutter_localizations:
     sdk: flutter
-  flutter_markdown: ^0.7.3+1
-  flutter_riverpod: ^2.4.10
-  flutter_svg: ^2.0.9
-  fluttertoast: ^8.2.5
+  flutter_markdown: ^0.7.4+1
+  flutter_riverpod: ^2.6.1
+  fluttertoast: ^8.2.8
   gap: ^3.0.1
-  go_router: ^13.2.0
+  go_router: ^14.3.0
   http: ^1.2.2
-  icons_launcher: ^2.1.7
+  icons_launcher: ^3.0.0
   intl: any
-  package_info_plus: ^7.0.0
+  package_info_plus: ^8.1.0
   path: ^1.9.0
-  path_provider: ^2.1.2
   permission_handler: ^11.3.1
-  shared_preferences: ^2.2.2
-  slang: ^3.31.1
-  slang_flutter: ^3.31.0
-  sqflite: ^2.3.3+1
-  timezone: ^0.9.2
-  url_launcher: ^6.3.0
+  shared_preferences: ^2.3.2
+  slang: ^4.1.0
+  slang_flutter: ^4.1.0
+  sqflite: ^2.4.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   lint: any
